MDEV-23927 Crash in ./mtr --skip-innodb-fast-shutdown innodb.temporary_tables

innodb_preshutdown(): On innodb_fast_shutdown=0, only wait for
transactions to exit if the transaction system had been initialized.

Reviewed by: Vladislav Vaintroub